# Legal.ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  db.py  jobs.py  main.py
data/: README.md
data/processed/: BNS-2023.report.json  BNSS-2023.report.json  BSA-2023.report.json  CONSTITUTION-1950.jsonl  CONSTITUTION-1950.report.json  CrPC-1973.jsonl  CrPC-1973.report.json  EVIDENCE_ACT-1872.jsonl  EVIDENCE_ACT-1872.report.json  IPC-1860.jsonl  IPC-1860.report.json  statute_mappings_seed.csv
db/: apply_schema.py  schema.sql
docs/architecture/: data_flow.md
observability/: __init__.py  langfuse_client.py
pipeline/: __init__.py  architecture_doc.py  chunking.py  confidence.py  config.py  docling_parse.py  embeddings.py  fallback.py  graph.py  injection_screen.py  llm.py  llm_config.py  pdf_safety.py  persistence.py  prompt_spec.py  prompts.py  router.py  run.py  statute_verification.py  validation.py
pipeline/agents/: arguments.py  base.py  evidence.py  facts.py  metadata.py  response.py  statute.py
schemas/: __init__.py  arguments.py  base.py  confidence.py  enums.py  evidence.py  facts.py  final.py  metadata.py  state.py  statutes.py  validation.py
scripts/: setup_checkpointer.py
statute_kb/: __init__.py  acts.py  ingest.py  lookup.py  mappings.py  parser.py
tests/: test_confidence.py  test_validation.py
web/: .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/documents/[id]/: page.tsx
web/app/kb/: page.tsx
web/app/settings/: page.tsx
web/components/: audit-trail.tsx  confidence-panel.tsx  documents-table.tsx  nav.tsx  pdf-viewer.tsx  processing-timeline.tsx  record-view.tsx  review-banner.tsx  theme-toggle.tsx  ui.tsx  upload-dropzone.tsx
web/lib/: api.ts  labels.ts
